<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:src="@drawable/baseline_male_24"
        android:padding="6dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        app:layout_constraintStart_toEndOf="@+id/fullname"
        android:contentDescription="@string/gender" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/age"
        android:text="@string/age"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/birthday"
        app:layout_constraintTop_toBottomOf="@+id/fullname"/>

    <TextView
        android:id="@+id/email"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phone"
        android:text="@string/phone_number"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/address"
        android:text="@string/address"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/about_me"
        android:text="@string/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/about_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>